--- a/.github/workflows/cli-workflow.yml
+++ b/.github/workflows/cli-workflow.yml
@@ -17,9 +17,7 @@ jobs:
         with:
           comment_tag_name: "CLI"
           feed_list: "https://make.wordpress.org/cli/feed"
-                  max_post_count: 1000
+          max_post_count: 1000
           item_exec: |
-                 const DAY = 24 * 60 * 60 * 1000;
-                 const DAYS_AGO = 7;  // 7 days ago
-                 const dateObj = new Date(Date.now() - (DAYS_AGO * DAY));
-                 if (post.date < dateObj) post = null;
+                 const today = new Date();
+                 if ((post.date.getMonth() !== today.getMonth()) && (post.date.getYear() !== today.getYear())) post = null;
